--- a/src/app/Auth/signup-company/signup-company.html
+++ b/src/app/Auth/signup-company/signup-company.html
@@ -153,7 +153,7 @@
               placeholder="Password (min 8 characters)"
               [class.input-error]="password?.invalid && password?.touched">
             <button type="button" class="toggle-password" (click)="togglePasswordVisibility()">
-              <i [class]="showPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"></i>
+              <i [class]="showPassword ? 'fas fa-eye' : 'fas fa-eye-slash'"></i>
             </button>
           </div>
           <span class="error-message" *ngIf="password?.invalid && password?.touched">
@@ -178,7 +178,7 @@
               placeholder="Re-enter Password"
               [class.input-error]="(confirmPassword?.invalid && confirmPassword?.touched) || (companySignupForm.errors?.['passwordMismatch'] && confirmPassword?.touched)">
             <button type="button" class="toggle-password" (click)="toggleConfirmPasswordVisibility()">
-              <i [class]="showConfirmPassword ? 'fas fa-eye-slash' : 'fas fa-eye'"></i>
+              <i [class]="showConfirmPassword ? 'fas fa-eye' : 'fas fa-eye-slash'"></i>
             </button>
           </div>
           <span class="error-message" *ngIf="confirmPassword?.invalid && confirmPassword?.touched">
