--- a/src/app/Home/company-dashboard/company-dashboard.html
+++ b/src/app/Home/company-dashboard/company-dashboard.html
@@ -279,6 +279,17 @@
             <strong>Vendor Response:</strong>
             <p>{{ request.vendorResponse }}</p>
           </div>
+          
+          <!-- Edit Button at bottom right -->
+          <div class="request-actions">
+            <button 
+              class="btn-edit-request" 
+              (click)="editRequest(request)"
+              title="Edit Request">
+              <i class="fas fa-edit"></i>
+              Edit Request
+            </button>
+          </div>
         </div>
       </div>
       
@@ -367,8 +378,8 @@
         </div>
 
         <button type="submit" class="btn-submit" [disabled]="isSubmitting || requestForm.invalid">
-          <i [class]="isSubmitting ? 'fas fa-spinner fa-spin' : 'fas fa-paper-plane'"></i>
-          {{ isSubmitting ? 'Submitting...' : 'Submit Request' }}
+          <i [class]="isSubmitting ? 'fas fa-spinner fa-spin' : (isEditingRequest ? 'fas fa-save' : 'fas fa-paper-plane')"></i>
+          {{ isSubmitting ? (isEditingRequest ? 'Updating...' : 'Submitting...') : (isEditingRequest ? 'Update Request' : 'Submit Request') }}
         </button>
       </form>
     </div>
